# MaatiTrace

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  raw_test.py  test_db.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 024286745a17_removed_foregin_key_constraint_from_.py  0b827cb8f0ca_farm_spatial_repository_inserts_resolve.py  0ef28932281e_create_districts_table.py  44522c7a1c9a_make_village_nullable_in_farms.py  4fed38d757d9_add_farm_h3_cells.py  5b33b983b42e_add_farm_system.py  7e067b739fb7_initial_platform_schema.py  80998caed841_create_farm_registry_tables.py  8390eca0a0bb_fix_farm_hierarchy_schema.py  a7232c16266a_create_districts_table.py  aafe062757af_make_village_nullable_in_farms_2.py  e7cd3b3f0a58_make_village_nullable_in_farms.py  ef2600931b69_fix_farm_hierarchy_schema.py
backend/core/config/: settings.py
backend/core/database/: base.py  base_imports.py  session.py  sync_session.py
backend/core/database/models/: __init__.py  block.py  district.py  farm.py  farm_boundary.py  farm_h3_cell.py  farmer.py  h3_cell.py  state.py  village.py
backend/data/boundaries/: sambalpur.geojson
backend/data/farm_hierarchy/csv/: Angul_block.csv  Deogarh_block.csv  Dhenkanal_block.csv  India_state.csv  Khordha_block.csv  Mayurbhanj_block.csv  Odisha_district.csv  Puri_block.csv  Sambalpur_block.csv
backend/exports/: h3.mbtiles  h3_tiles.pmtiles
backend/scripts/: generate_h3_grid.py  ingest_hierarchy.py  load_farm_hierarchy.py  load_sambalpur.py  normalize_hierarchy.py
backend/services/api-gateway/: README.md  pyproject.toml
backend/services/api-gateway/app/: main.py
backend/services/api-gateway/app/core/: config.py  lifespan.py
backend/services/api_gateway/: Dockerfile
backend/services/api_gateway/app/: main.py
backend/services/api_gateway/app/cache/: redis_cache.py
frontend/: package-lock.json  (+1 more)
(+22 files in other folders)
