[tool.poetry]
name = "maatitrace-backend"
version = "0.1.0"
description = "Backend services and data pipelines for MaatiTrace."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

