[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Production geospatial agricultural intelligence backend"
authors = ["Neha Pati"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
redis = "^6.4.0"
geoalchemy2 = "^0.18.0"
geopandas = "^1.1.1"
shapely = "^2.1.1"
pyproj = "^3.7.2"
h3 = "^4.3.1"
rasterio = "^1.4.3"
rio-cogeo = "^5.4.2"
boto3 = "^1.40.31"
structlog = "^25.4.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.12"
pyogrio = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
black = "^26.0.0"
ruff = "^0.15.13"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"